Fixed z-indexes.

--- a/src/css/components/container.less
+++ b/src/css/components/container.less
@@ -29,5 +29,5 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 100;
+    z-index: 50;
 }
