--- a/src/css/components/menu.less
+++ b/src/css/components/menu.less
@@ -36,7 +36,7 @@
         background-color: darken(@bg-color3, 6%);
         border: 1px solid darken(@border-color, 6%);
         overflow: hidden;
-        z-index: 2;
+        z-index: 100;
 
         &>.item {
             position: relative;
