--- a/src/css/components/stage.less
+++ b/src/css/components/stage.less
@@ -39,6 +39,7 @@
         top: 50%;
         transform: translate(-50%,-50%);
         animation: rotate .3s linear infinite;
+        z-index: 3;
     }
 
     .render-info {
